[package]
name = "cargo-shellcode"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-subcommand = "0.12.0"
cargo_metadata = "0.18.1"
clap = { version = "4.5.15", features = ["derive"] }
goblin = "0.8.2"
thiserror = "1.0.63"

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
nix = { version = "0.29.0", features = ["mman", "fs"] }
