[package]
name = "cargo-shellcode"
description = "Compile a Rust crate into shellcode"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/novafacing/cargo-shellcode"
readme = "../README.md"
keywords = ["shellcode", "rust", "cargo", "binary"]

[dependencies]
cargo-subcommand = "0.12.0"
cargo_metadata = "0.18.1"
clap = { version = "4.5.15", features = ["derive"] }
goblin = "0.8.2"
thiserror = "1.0.63"
nix = { version = "0.29.0", features = ["mman"] }

[build-dependencies]
cmake = "0.1.50"

[dev-dependencies]
nix = { version = "0.29.0", features = ["mman", "fs"] }
